# agentic-divorce-attorney-ai-system-crewai-mcp-ollama-streamlit

./: .gitignore  README.md  build_vector_db_laws.py  built_vector_db.py  main.py  pyproject.toml  retrieval_pipeline.py
client/: app.py  divorce_attorney_client.py  divorce_attorney_client_v2.py
data/laws/: UK_Divorce_Act_chunks_metadata.json  UK_Divorce_Act_clean.json
output/: peitition.txt
servers/: case_retrieval_server.py  case_strategy_server.py  clause_retrieval_server.py  model.py  petition_template_server.py
vector_stores/faiss_divorce_act/: index.faiss  index.pkl
vector_stores/faiss_laws/: index.faiss  index.pkl
